# model-predictive-control

./: CMakeLists.txt
include/model-predictive-control/: Controller.hh  Problem.hh  Solver.hh  Step.hh  StepPlan.hh  logger.hh
src/: CMakeLists.txt  Controller.cc  Problem.cc  Solver.cc  StepPlan.cc  logger.cc  testClass.cc
tests/: CMakeLists.txt  steps.cc
tests/configs/: steps.yml
