INCLUDE_DIRECTORIES(BEFORE ${Boost_INCLUDE_DIR})

ENABLE_TESTING()

SET(Boost_USE_STATIC_LIBS ON)
SET(BOOST_COMPONENTS unit_test_framework)
SEARCH_FOR_BOOST()

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

ADD_DEFINITIONS(-DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
ADD_DEFINITIONS(-DCONFIGS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}/configs")

MACRO(ADD_SCENARIO name)
  ADD_EXECUTABLE(${name} ${name}.cc)
  TARGET_LINK_LIBRARIES(${name} ${Boost_LIBRARIES} model-predictive-control)
  TARGET_LINK_LIBRARIES(${name} debug EigenQP_d optimized EigenQP_d)
ENDMACRO(ADD_SCENARIO)

ADD_SCENARIO("steps")
